--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,5 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:7.1.1'
     def multidex_version = "2.0.1"
     implementation "androidx.multidex:multidex:$multidex_version"
+    implementation 'com.google.android.gms:play-services-wallet:18.1.2'
 }
