--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Cyacle">
-        <activity android:name=".ui.activities.ProfileActivity"></activity>
+        <activity android:name=".ui.activities.ProfileActivity"/>
         <activity android:name=".ui.activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,7 +40,7 @@
         <activity
             android:name=".ui.activities.SignInActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Cyacle.NoActionBar"></activity>
+            android:theme="@style/Theme.Cyacle.NoActionBar"/>
 
         <meta-data
             android:name="com.google.android.gms.wallet.api.enabled"
