--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.oman.sayakil"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -61,7 +61,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore'
     def multidex_version = "2.0.1"
     implementation "androidx.multidex:multidex:$multidex_version"
-    implementation 'com.google.android.gms:play-services-wallet:18.1.2'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "androidx.recyclerview:recyclerview:1.1.0"
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    // razorpayment gate
+    implementation 'com.razorpay:checkout:1.6.6'
 }
