--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,10 @@ dependencies {
 
     // razorpayment gate
     implementation 'com.razorpay:checkout:1.6.6'
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'            // image loader
+    implementation 'com.mikhaellopez:circularimageview:3.2.0'          // circle image view
+
+
 }
