--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
 
         <activity android:name=".ui.activities.FeedBackActivity" />
         <activity android:name=".ui.activities.ProfileActivity" />
+        <activity android:name=".ui.activities.PaymentCardDetailsActivity" />
         <activity android:name=".ui.activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
