--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Cyacle">
-        <activity
-            android:name=".ui.activities.BottomSheetMapActivity"></activity>
+        <activity android:name=".ui.activities.BottomSheetMapActivity"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -41,13 +40,19 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".ui.activities.FeedBackActivity"
-            android:parentActivityName=".ui.activities.MainActivity"/>
+        <activity
+            android:name=".ui.activities.FeedBackActivity"
+            android:parentActivityName=".ui.activities.MainActivity" />
         <activity android:name=".ui.activities.ProfileActivity" />
-        <activity android:name=".ui.activities.PaymentCardDetailsActivity"
-            android:parentActivityName=".ui.activities.MainActivity"/>
-        <activity android:name=".ui.activities.PaymentInformationActivity"
-            android:parentActivityName=".ui.activities.MainActivity"/>
+        <activity
+            android:name=".ui.activities.PaymentCardDetailsActivity"
+            android:parentActivityName=".ui.activities.MainActivity" />
+        <activity
+            android:name=".ui.activities.PaymentInformationActivity"
+            android:parentActivityName=".ui.activities.MainActivity" />
+        <activity
+            android:name=".ui.activities.MemberShipActivity"
+            android:parentActivityName=".ui.activities.MainActivity" />
         <activity android:name=".ui.activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
